Add events to swagger file
